aboutme section added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="animate__animated animate__pulse animate__infinite"></div>
                 <div>
                     <h4>projects</h4>
-                    <p>10 completed</p>
+                    <p>5 completed</p>
                 </div>
             </div>
             <div>
@@ -150,13 +150,64 @@
 
     </section>
 
+    <!--    about me section-->
+    <section class="aboutme-section">
+        <dfn id="about-section"></dfn>
+
+        <div>
+            <h1><span>A</span>bout Me<span>&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-user"></i></span></h1>
+        </div>
+
+        <section>
+            <aside>
+                <img src="assets/myPhoto.png" alt="about-personal-img">
+            </aside>
+
+            <aside>
+                <p><span>Name : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+
+                    Nadeesha Samaraweera <br>
+
+                    <span>Age : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+
+                    24 <br>
+
+                    <span>Degree : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+
+                    BSc(Hons). in Computer Science(UG) <br>
+
+                    <span>Email : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+
+                    <a id="aboutGmail" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=nadeesamaraweera2000@gmail.com"
+                       target="_blank">
+
+                        nadeesamaraweera2000@gmail.com</a> <br>
+
+                    <span>City : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+
+                    Matara <br>
+
+                    <span>Phone Number : &nbsp;&nbsp;</span> <a id="aboutPhone" href="tel:+94716490250">
+                        +(94)716490250 </a></p>
+
+                <p>I'm <span>Nadeesha</span>, and I'm a <span>Developer</span> <br>
+                    And also, I'm a Student of Institute of Software Engineering
+                    <abbr title="institute of software engineering">(IJSE)</abbr> <br>
+                    who completed GDSE course Successfully.
+                </p>
+
+            </aside>
+        </section>
+    </section>
+
+
   
- </main>
+
  <script src="/JS/portflio.js"></script>
- <script src="/JS/code.jquery.com_jquery-3.7.1.min.js"></script>
+ <script src="jquery/code.jquery.com_jquery-3.7.1.min.js"></script>
+ 
  
 
-
-
+</main>
 </body>
 </html>
