--- a/index.html
+++ b/index.html
@@ -348,6 +348,86 @@
 
 
 
+    <!--    recent works-->
+    <section class="recent-works">
+
+        <dfn id="project-section"></dfn>
+
+        <h4><u>.Recent Works That I Do.</u></h4>
+
+        <h1><span>M</span>y Projects</h1>
+        <!--            line-->
+
+        <section>
+            <div>
+                <svg class="work-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 372 357" fill="none">
+                    <g filter="url(#filter0_d_168_75)">
+                        <path class="path" d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z"
+                              fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_168_75" x="0" y="0" width="371.026" height="356.237"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                           values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="10"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_75"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_75" result="shape"/>
+                        </filter>
+                    </defs>
+
+                </svg>
+
+                <div>
+                    <!--                           <img src="assets/images/enterprise-icon.png" alt="enterprise-icon-img">-->
+                    <div></div>
+                    <h4>Stand Alone</h4>
+                    <p>view my standAlone software<br>
+                        products in my gitHub or<br>
+                        web page</p>
+                    <a href="page/Standalone.html" target="_blank">View</a>
+                </div>
+            </div>
+
+            
+
+            <div>
+                <svg class="work-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 372 357" fill="none">
+                    <g filter="url(#filter0_d_168_75)">
+                        <path class="path" d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z"
+                              fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_168_75" x="0" y="0" width="371.026" height="356.237"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                           values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="10"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_75"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_75" result="shape"/>
+                        </filter>
+                    </defs>
+                </svg>
+                <div>
+                    <!--                          <img src="assets/images/uiux-icon.png" alt="uiux-img">-->
+                    <div></div>
+                    <h4>Assignments</h4>
+                    <p>HTML/CSS/JavaScript in my<br>
+                        Assignment</p>
+                    <a href="page/Assignment.html" target="_blank">View</a>
+                </div>
+            </div>
+        </section>
+
+    </section>
 
 
     <!--    language and tool section-->
