contact section added

--- a/index.html
+++ b/index.html
@@ -527,6 +527,82 @@
 
     </section>
 
+
+     <!--    contact me-->
+     <section class="contact-section">
+
+        <dfn id="contact-section"></dfn>
+
+        <h4><u>.Follow Me.</u></h4>
+
+        <h1><span>C</span>ontact Me.</h1>
+
+
+        <!--            contact aside-->
+        <section>
+            <address>
+                <div>
+                    <img src="assets/icons8-telephone-90.png" alt="call-icon">
+                    <div>
+                        <h4>Call me</h4>
+                        <a href="tel:+94703973327">+(94)716490250</a>
+                    </div>
+                </div>
+
+                <div>
+                     <img src="assets/icons8-email-90.png" alt="email-icon">
+                    <div>
+                        <h4>Email</h4>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=nadeesamaraweera2000@gmail.com"
+                           target="_blank">nadeesamaraweera2000@gmail.com</a>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="assets/icons8-location-100.png" alt="location-icon">
+
+                    <div>
+                        <h4>Location</h4>
+                        <a href="https://www.google.com/maps/search/Matara,eliyakande/@5.9447695,80.5592497,16z/data=!3m1!4b1?entry=ttu" target="_blank"> Matara, Sri lanka</a>
+                    </div>
+                </div>
+
+                  </address>
+
+            <!--            form section-->
+            <aside>
+                <form>
+
+                    <fieldset>
+
+                        <!--                                <legend>Clients Data</legend>-->
+
+                        <label for="name">Name</label><br>
+                        <input id="name" type="text" required> <br>
+
+                        <label for="address">Address</label><br>
+                        <input id="address" type="text" required><br>
+
+                        <label for="title">Title</label><br>
+                        <input id="title" type="text" required><br>
+
+                        <label for="message">Message</label><br>
+                        <textarea required id="message" name="area" cols="30" rows="5"></textarea>
+                        <br><br>
+
+                        <button type="submit" onclick="myAlertFunc()">Send Message</button>
+                    </fieldset>
+
+                </form>
+            </aside>
+        </section>
+
+
+    </section>
+
+</main>
+
+
    
 
   
@@ -534,8 +610,5 @@
  <script src="/JS/portflio.js"></script>
  <script src="jquery/code.jquery.com_jquery-3.7.1.min.js"></script>
  
- 
-
-</main>
-</body>
+ </body>
 </html>
