footer section added

--- a/index.html
+++ b/index.html
@@ -603,6 +603,53 @@
 </main>
 
 
+<footer id="footer">
+
+    <section>
+        <div>
+            <div></div>
+            <div>
+                <h4>Nadeesha Samaraweera</h4>
+                <p>Full Stack Developer</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="animate__animated animate__pulse animate__infinite"></div>
+            
+            <!--                   <img src="assets/images/down-icon.png" alt="my icon in hear">-->
+        </div>
+    </section>
+
+    <nav>
+
+        <a href="https://www.facebook.com/nadeesha samaraweera.9?mibextid=ZbWKwL"
+           target="_blank"><abbr title="facebook profile">
+            <img src="assets/icons8-fb-96.png" alt="fb-icon" style="width: 45px"></abbr>
+        </a>
+
+        <a href="https://github.com/nadeesamaraweera"
+           target="_blank"><abbr title="Git Hub profile">
+            <img src="/assets/icons8-github-90.png" alt="git hub-icon" style="width: 50px"></abbr>
+        </a>
+
+
+        <a href="https://www.linkedin.com/in/-b81446191"
+           target="_blank"><abbr title="Linkedin Profile">
+            <img src="assets/icons8-linked-in-96.png" alt="Linkedin-icon" style="width: 50px"></abbr>
+        </a>
+
+        
+
+    </nav>
+
+    <div>
+        <small>Copyright &copy; 2024 Nadeesha Samaraweera. &reg; All Rights Reserved</small>
+    </div>
+
+</footer>
+
+
    
 
   
