fixed the error project section

--- a/index.html
+++ b/index.html
@@ -431,6 +431,11 @@
                     <a href="page/Assignment.html" target="_blank">View</a>
                 </div>
             </div>
+
+            <div>
+                
+               
+            </div>
         </section>
 
     </section>
