--- a/index.html
+++ b/index.html
@@ -577,7 +577,10 @@
                         <a href="https://www.google.com/maps/search/Matara,eliyakande/@5.9447695,80.5592497,16z/data=!3m1!4b1?entry=ttu" target="_blank"> Matara, Sri lanka</a>
                     </div>
                 </div>
-
+                <div>
+                <br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.3755165982925!2d80.56358228247737!3d5.942874414294259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae1391fb18fe309%3A0xaa9eb427bb7775a3!2sEliyakanda!5e0!3m2!1sen!2slk!4v1717215835852!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
                   </address>
 
             <!--            form section-->
@@ -601,7 +604,7 @@
                         <textarea required id="message" name="area" cols="30" rows="5"></textarea>
                         <br><br>
 
-                        <button type="submit" onclick="myAlertFunc()">Send Message</button>
+                        <button type="submit" onclick="myAlertFunc()">Send Message </button>
                     </fieldset>
 
                 </form>
@@ -649,6 +652,8 @@
            target="_blank"><abbr title="Linkedin Profile">
             <img src="assets/icons8-linked-in-96.png" alt="Linkedin-icon" style="width: 50px"></abbr>
         </a>
+
+        
 
         
 
