--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <strong>good vibes only !</strong>
 
                     <div>
-                        <a href="assets/cv/my-cv.pdf" download="">
+                        <a href="CV/My cv.pdf" download="">
                             <button>Download CV</button>
                         </a>
                         <a href="#contact-section">
