--- a/index.html
+++ b/index.html
@@ -585,29 +585,30 @@
 
             <!--            form section-->
             <aside>
-                <form>
+                <form action="https://api.web3forms.com/submit" method="POST">
 
                     <fieldset>
 
-                        <!--                                <legend>Clients Data</legend>-->
-
+                        <input type="hidden" name="access_key" value="0761806a-2e61-4b09-b3fb-30be73e7a0cf">
                         <label for="name">Name</label><br>
-                        <input id="name" type="text" required> <br>
+                        <input id="name" type="text" name="Name" required> <br>
 
                         <label for="address">Address</label><br>
-                        <input id="address" type="text" required><br>
+                        <input id="address" type="text" name="Address" required><br>
 
                         <label for="title">Title</label><br>
-                        <input id="title" type="text" required><br>
+                        <input id="title" type="text" name="Title" required><br>
 
                         <label for="message">Message</label><br>
-                        <textarea required id="message" name="area" cols="30" rows="5"></textarea>
+                        <textarea required id="message" name="Message" cols="30" rows="5"></textarea>
                         <br><br>
 
-                        <button type="submit" onclick="myAlertFunc()">Send Message </button>
+                        <button type="submit" onclick="myAlertFunc()">Send Message<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=nadeesamaraweera2000@gmail.com"></a> </button>
                     </fieldset>
 
                 </form>
+
+               
             </aside>
         </section>
 
