fixed the the error in form

--- a/index.html
+++ b/index.html
@@ -591,19 +591,19 @@
 
                         <input type="hidden" name="access_key" value="0761806a-2e61-4b09-b3fb-30be73e7a0cf">
                         <label for="name">Name</label><br>
-                        <input id="name" type="text" name="Name" required> <br>
+                        <input id="name" type="text" name="name" placeholder="Your Name" required> <br>
 
-                        <label for="address">Address</label><br>
-                        <input id="address" type="text" name="Address" required><br>
+                        <label for="email">Email</label><br>
+                        <input id="email" type="text" name="email" placeholder="Your Email"><br>
 
                         <label for="title">Title</label><br>
-                        <input id="title" type="text" name="Title" required><br>
+                        <input id="title" type="text" name="Title" placeholder="Title"><br>
 
                         <label for="message">Message</label><br>
-                        <textarea required id="message" name="Message" cols="30" rows="5"></textarea>
+                        <textarea required id="message" name="Message" placeholder="Your Message" cols="30" rows="5"></textarea>
                         <br><br>
 
-                        <button type="submit" onclick="myAlertFunc()">Send Message<a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=nadeesamaraweera2000@gmail.com"></a> </button>
+                        <button type="submit" onclick="myAlertFunc()">Send Message</button>
                     </fieldset>
 
                 </form>
