--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nadeesha Samaraweera | Portfolio</title>
     <!-- <link rel="stylesheet" href="CSS/style.css"> -->
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
