--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </li>
                 <li class="hideOnMobile"><a href="#contact-section"><i class ='bx bxs-phone bx-tada'></i>&nbsp;&nbsp;Contact</a>
                 </li>
-                <li  class="menu-button" onclick=showSidebar()><a href="#contact-section"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
+                <li  class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a>
                 </li>
             </menu>
         </div>
